# solana-verify-squads-mpl

app/: package.json
programs/squads-mpl/: Cargo.toml  README.md
programs/squads-mpl/src/: account.rs  errors.rs  lib.rs  state.rs
