[package]
name = "squads-mpl"
version = "1.3.0"
description = "Squads Multisig Program Library"
authors = [
    "Sean Lars Ganser <sean@sqds.io>",
    "Bastien Guillaumat <bastien@sqds.io>",
]
homepage = "https://squads.so"
repository = "https://github.com/squads-dapp/squads-mpl"
edition = "2018"
keywords = ["squads", "solana", "program", "smart-contract", "multisig"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_mpl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
kani = ["anchor-lang/kani", "otter-solana-verify/kani"]

[dependencies]
anchor-lang = { package = "onchor", git = "https://github.com/otter-sec/verify" }
default-env = "0.1.1"
hex = "0.3.1"
otter-solana-verify = { package = "otter-solana-macro", git = "https://github.com/otter-sec/verify", features = [
    "anchor",
] }
solana-security-txt = "1.0.1"
